# hat-graph-guessing

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  README.md  analyze_new_topologies.py  analyze_topologies.py  benchmark.py  hats_demo.ipynb  index.html  raport_final.tex  raport_final.toc  visualize.py  visualize_split.py
apps/: main.cpp
cmake/: Sanitizers.cmake
docs/: ARCHITECTURE.md
include/hats/: graph.hpp  knowledge.hpp  types.hpp
include/solver/: solver.hpp
src/: bindings.cpp  graph.cpp  knowledge.cpp  solver.cpp
tests/: test_bindings.py  test_graph.cpp  test_knowledge.cpp  test_solver.cpp
